free-body diagram particle

--- a/notebooks/newtonLawForParticles.ipynb
+++ b/notebooks/newtonLawForParticles.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
    "source": [
     "Steps to find the motion of the particle:\n",
     "\n",
-    "1 - Draw a free body diagram of the particle. Draw all the forces being applied to thew particle.\n",
+    "1 - Draw a free body diagram of the particle. Draw all the forces being applied to the particle.\n",
     "\n",
     "2 - Write the expression of each force applied to the particle. For external forces (for example gravity and air friction) write the constitutive laws of the phenomena.\n",
     "\n",
@@ -976,7 +976,7 @@
     "\n",
     "$\\frac{dy}{dt} = v_y(t)$\n",
     "\n",
-    "You can use any integration numerical method you want (Euler, Runge-Kutta, etc), bu here we will use the Euler method. Below the Euler method will be exemplified with the $x(t)$ variable:\n",
+    "You can use any integration numerical method you want (Euler, Runge-Kutta, etc), but here we will use the Euler method. Below the Euler method will be exemplified with the $x(t)$ variable:\n",
     "\n",
     "The derivative of signal $x(t)$ is given by:\n",
     "\n",
@@ -1849,7 +1849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The solution of linear differential equation can be found by finding the natural solution and the forced solution and then adding both solutions.\n",
+    "The solution of a linear differential equation can be found by finding the natural solution and the forced solution and then adding both solutions.\n",
     "\n",
     "First, we solve the first differential equation ($x$ coordinate). The characteristic polynomial of the equation is:\n",
     "\n",
@@ -1891,7 +1891,7 @@
     "\n",
     "$\\cancelto{0}{\\frac{d^2y}{dt^2}} = -\\frac{b}{m}\\frac{dy_f}{dt} - g -\\rightarrow \\frac{dy_f}{dt} = -\\frac{mg}{b} \\rightarrow y_f(t) =   -\\frac{mg}{b}t$\n",
     "\n",
-    "The complete solution of the motion of the ball in the $y$ coordinate is the addition of the natural and forced solutions:\n",
+    "The complete solution of the motion of the ball in the $y$ coordinate is the sum of the natural and forced solutions:\n",
     "\n",
     "$y(t) = A + Be^{-\\frac{b}{m}t} -\\frac{mg}{b}t$\n",
     "\n",
@@ -4458,7 +4458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
