free-body diagram particles

--- a/notebooks/FBDParticles.ipynb
+++ b/notebooks/FBDParticles.ipynb
@@ -241,7 +241,7 @@
     "    m\\frac{d^2\\vec{\\bf{r}}}{dt^2} = -k\\left(1-\\frac{l_0}{||\\vec{\\bf{r}}||}\\right)\\vec{\\bf{r}} \\rightarrow \\frac{d^2\\vec{\\bf{r}}}{dt^2} = -\\frac{k}{m}\\left(1-\\frac{l_0}{||\\vec{\\bf{r}}||}\\right)\\vec{\\bf{r}}\n",
     "\\end{equation}\n",
     "\n",
-    "Since the movement is unidimensional, we can treat it scalarly:\n",
+    "Since the movement is unidimensional, we can deal with it scalarly:\n",
     "\n",
     "\\begin{equation}\n",
     "    \\frac{d^2x}{dt^2} = -\\frac{k}{m}\\left(1-\\frac{l_0}{x}\\right)x = -\\frac{k}{m}(x-l_0) \n",
