--- a/notebooks/newtonLawForParticles.ipynb
+++ b/notebooks/newtonLawForParticles.ipynb
@@ -102,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = 0.43 # [kg]\n",
@@ -4458,7 +4460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
