--- a/notebooks/FBDParticles.ipynb
+++ b/notebooks/FBDParticles.ipynb
@@ -1139,7 +1139,7 @@
     "\\end{equation}\n",
     "\n",
     "\n",
-    "To solve these equations numerically, you must break these equations into first-order linear equations:\n",
+    "To solve these equations numerically, you must break these equations into first-order  equations:\n",
     "\n",
     "\n",
     "\\begin{equation}\n",
@@ -2163,7 +2163,7 @@
     "    \\frac{d^2y_2}{dt^2} = -\\frac{b}{m_2}\\left(\\frac{dy_2}{dt}-\\frac{dy_1}{dt}\\right)-\\frac{k}{m_2}\\left(1-\\frac{l_0}{\\sqrt{(x_2-x_1)^2+(y_2-y_1)^2}}\\right)(y_2-y_1)\n",
     "\\end{equation}\n",
     "\n",
-    "If you want to solve these equations numerically, you must break these equations into first-order linear equations:\n",
+    "If you want to solve these equations numerically, you must break these equations into first-order  equations:\n",
     "\n",
     "\\begin{equation}\n",
     "    \\frac{dv_{x_1}}{dt} = -\\frac{b}{m_1}\\left(v_{x_1}-v_{x_2}\\right)-\\frac{k}{m_1}\\left(1-\\frac{l_0}{\\sqrt{(x_2-x_1)^2+(y_2-y_1)^2}}\\right)(x_1-x_2)\n",
