--- a/notebooks/newton_euler_equations.ipynb
+++ b/notebooks/newton_euler_equations.ipynb
@@ -224,7 +224,7 @@
     "First, a general consideration about the total angular momentum of a rotting rigid body:  \n",
     "The total angular momentum of a rigid body rotating around a point $O$ can be expressed as the angular momentum of the body center of mass around the point $O$ plus the sum of the angular momentum of each particle around the body center of mass (for a proof see page 368 of Taylor, 2005):\n",
     "\n",
-    "$$ \\mathbf{L} = \\mathbf{r}_{cm/O} \\times m\\mathbf{v}_{cm/O} + \\sum \\mathbf{r}_{i/cm} \\times m_i\\mathbf{v}_{i/cm} $$\n",
+    "$$ \\mathbf{H} = \\mathbf{r}_{cm/O} \\times m\\mathbf{v}_{cm/O} + \\sum \\mathbf{r}_{i/cm} \\times m_i\\mathbf{v}_{i/cm} $$\n",
     "\n",
     "For a two-dimensional case, where the rigid body rotates around its own center of mass and also rotates around another parallel axis (fixed), the second term of the right side of the equation above can be simplified to $\\sum (m_i\\mathbf{r}^2_{i/cm}) \\mathbf{\\omega}$ and calculating the time derivative of the whole equation, the second Euler's law of motion simplifies to:   \n",
     "\n",
