--- a/notebooks/FBDParticles.ipynb
+++ b/notebooks/FBDParticles.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -114,8 +116,6 @@
     "\n",
     "<figure><img src=\"../images/ballNoGrav.png\\\" width=700 />\n",
     "    \n",
-    "\n",
-    "\n",
     "In this situation, the resultant force is:\n",
     "\n",
     "\\begin{equation}\n",
@@ -893,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
