center of mass and moment of inertia

--- a/notebooks/Untitled1.ipynb
+++ b/notebooks/Untitled1.ipynb
@@ -860,6 +860,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sympy as sym\n",
+    "sym.init_printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x, y = sym.symbols('x,y')\n",
+    "rho, h , b, n = sym.symbols('rho, h, b, n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xcm = sym.integrate(sym.integrate(x,(y, 0, x*h*n/b)), (x,0, b/n))+sym.integrate(sym.integrate(x,(y, 0, (b-x)*h*n/(b*n-b))), (x,b/n, b))\n",
+    "ycm = sym.integrate(sym.integrate(y,(y, 0, x*h*n/b)), (x,0, b/n))+sym.integrate(sym.integrate(y,(y, 0, (b-x)*h*n/(b*n-b))), (x,b/n, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAAsAAAArBAMAAABcLm8jAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAELvv3c2rVESJdpki\nZjI6QXVuAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAApElEQVQYGWNgVHZgAAHWBDDFXwCm+gXA1BQw\nyRC2ajuQwfhVQP4AAwP7Rwb+CQwM3AEM8kCKdQNDP1AL/wWG/UAt/A2MtkCVbBeYNoA07NoLJCkF\n/0HgA1GmnN6kB1THmMAwvwHoCAEGZgMGBmYHBrZ/QHd+BFNAaZaPYLP6J4ApNzDJDXIuA8NqMMm+\ngeEMkPGagWENAwOP58xtDkDtQDc4MAAAdkgoiEQBjMMAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$\\frac{b}{2}$$"
+      ],
+      "text/plain": [
+       "b\n",
+       "─\n",
+       "2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xcm.subs(n, 2)/(h*b/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAAwAAAArBAMAAAC+8nRaAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAELvv3c2ZVESJZnYi\nqzKqLvLVAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAApElEQVQYGWNgEDJhAIMwCPUdTHF8BFOcDmCK\nNX21DpAhH8NwF0jVP2BQAlKpDAzWQMqTgecfAwPjDwZOAwYGrg8MzBMWMvAGMPA3TGBgWsDAORuo\nhDLwHwyIMoNn5qQCoMJjDOy/gNT+AoYvQKq5gfErWDdYkIFBZAKId9JNACzIaQGmGIyB3DMMDPpA\n/f8FwJQRA4P/AQaGVQzsv4FKONKSGhgAEf4nKfREE/oAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$\\frac{h}{3}$$"
+      ],
+      "text/plain": [
+       "h\n",
+       "─\n",
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sym.simplify(ycm/(h*b/2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
