--- a/notebooks/CenterOfMassAndMomentOfInertia.ipynb
+++ b/notebooks/CenterOfMassAndMomentOfInertia.ipynb
@@ -617,7 +617,7 @@
     "\n",
     "- Ruina A, Rudra P (2015) [Introduction to Statics and Dynamics](http://ruina.tam.cornell.edu/Book/index.html). Oxford University Press. \n",
     "\n",
-    "- Kane T, Levinson D (2005) Dynamics: Theory and Applications"
+    "- Kane T, Levinson D (1985) [Dynamics: Theory and Applications](https://ecommons.cornell.edu/handle/1813/638). McGraw-Hill, Inc"
    ]
   },
   {
