--- a/notebooks/FreeBodyDiagramForRigidBodies.ipynb
+++ b/notebooks/FreeBodyDiagramForRigidBodies.ipynb
@@ -1077,7 +1077,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3) Pendulum\n",
+    "<a id='pendulum'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3) Pendulum \n",
     "\n",
     "Now, we will analyze a pendulum. It consists of a bar with its upper part linked to a hinge.\n",
     "\n",
@@ -1216,6 +1223,13 @@
     "\\begin{equation}\n",
     "    \\frac{d^2\\theta}{dt^2} = \\frac{3g}{2l}\\sin(\\theta)\n",
     "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='quietstanding'></a>"
    ]
   },
   {
@@ -1540,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
