--- a/notebooks/CenterOfMassAndMomentOfInertia.ipynb
+++ b/notebooks/CenterOfMassAndMomentOfInertia.ipynb
@@ -469,6 +469,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='matrixinertia'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Matrix of Inertia\n",
     "\n",
     "For 3D movements we must consider the moments of inertia inertia in the three directions besides three other quantities called products of inertia. A product of inertia is defined as in Eq.~\\eqref{eq:inmomgen}, but with each versor orthogonal to each other. So, the product of inertia relative to point O for axes a and b is:\n",
