--- a/notebooks/Tridimensional rigid body Kinetics.ipynb
+++ b/notebooks/Tridimensional rigid body Kinetics.ipynb
@@ -245,7 +245,7 @@
     "    \\label{eq:M3}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that the equations of the forces are written in the global frame of reference and the equations of the moments are described in the frame of reference of the body. So, before using the equations Eq.\\eqref{eq:M1},\\eqref{eq:M2} and \\eqref{eq:M3} you must transform all the forces and moment-arms to the frame of reference of the body by using rotation matrices.\n",
+    "Note that the equations of the forces are written in the global frame of reference and the equations of the moments are described in the frame of reference of the body. So, before using Eq.~\\eqref{eq:derivangmomVec} or the equations Eq.\\eqref{eq:M1},\\eqref{eq:M2} and \\eqref{eq:M3} you must transform all the forces and moment-arms to the frame of reference of the body by using rotation matrices.\n",
     "\n",
     "Below are shown some examples with tridimensional kinematic data to find the forces and moments acting on the body."
    ]
