--- a/notebooks/MatrixFormalism.ipynb
+++ b/notebooks/MatrixFormalism.ipynb
@@ -1813,8 +1813,8 @@
     " The free-body diagram of the gait, considering a 3D movement is very similar [to the 2D case](GaitAnalysis2D.ipynb). The equations of forces and moments are described by the Newton-Euler equations (for a revision on Tridimensional Newton-Euler equations click [here](Tridimensional%20rigid%20body%20Kinetics.ipynb)):\n",
     "\\begin{align}\n",
     "\\overrightarrow{F_A} + \\overrightarrow{GRF} + m_F\\overrightarrow{g} &= m_F\\overrightarrow{a_{cm_F}}\\\\\n",
-    "\\overrightarrow{F_K} -\\overrightarrow{F_A} + m_S\\overrightarrow{g} &= m_S\\overrightarrow{a_{cm_S}}\\\\\n",
     "\\overrightarrow{M_A} + \\overrightarrow{M_{GRF}}+ \\overrightarrow{M_{FA}}&=I_F\\overrightarrow{\\dot{\\omega_F}} + \\overrightarrow{\\omega_F} \\times (I_F\\overrightarrow{\\omega_F})\\\\ \n",
+    "\\overrightarrow{F_K} -\\overrightarrow{F_A} + m_S\\overrightarrow{g} &= m_S\\overrightarrow{a_{cm_S}}\\\\\n",
     "    \\overrightarrow{M_K} - \\overrightarrow{M_A} + \\overrightarrow{M_{FA}} + \\overrightarrow{M_{FK}} &= I_F\\overrightarrow{\\dot{\\omega_S}} + \\overrightarrow{\\omega_S} \\times (I_F\\overrightarrow{\\omega_S}) \n",
     "\\end{align}\n",
     "where \n",
@@ -1835,27 +1835,28 @@
     "\n",
     "\\begin{align}\n",
     "\\overrightarrow{F_A^G} + \\overrightarrow{GRF^G} + m_F\\overrightarrow{g^G} &= m_F\\overrightarrow{a_{cm_F}^G}\\\\\n",
-    "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
     "\\overrightarrow{M_A^F} + \\overrightarrow{M_{GRF}^F}+ \\overrightarrow{M_{FA}^F}&=I_F\\overrightarrow{\\dot{\\omega_F^F}} + \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})\\\\ \n",
+    "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
     "    \\overrightarrow{M_K^S} - \\overrightarrow{M_A^S} + \\overrightarrow{M_{FA}^S} + \\overrightarrow{M_{FK}^S} &= I_F\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_F\\overrightarrow{\\omega_S^S}) \n",
     "\\end{align}\n",
+    "where the superscript $G$ denotes the global frame of reference, the superscript $S$ denotes the frame of reference in the shank and the superscript $F$ denotes the frame of reference at the foot.\n",
     "\n",
     "The moments due to the ground reaction force, the force at the ankle and the force at the knee are computed by cross-multiplying them by their moment-arms. As the forces and the moment-arms are described in the global basis, we must multiply them by the rotation matrix of the basis corresponding to the segment. So, the equations can be rewritten as:\n",
     "\n",
     "\\begin{align}\n",
     "\\overrightarrow{F_A^G} + \\overrightarrow{GRF^G} + m_F\\overrightarrow{g^G} &= m_F\\overrightarrow{a_{cm_F}^G}\\\\\n",
-    "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
     "\\overrightarrow{M_A^F} + R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})+ R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)&=I_F\\overrightarrow{\\dot{\\omega_F^F}} + \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})\\\\ \n",
+    "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
     "\\overrightarrow{M_K^S} - \\overrightarrow{M_A^S} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G}) &= I_F\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_F\\overrightarrow{\\omega_S^S}) \n",
     "\\end{align}\n",
     "where $R_S$ is the rotation matrix of the basis attached to the shank and $R_F$ is the rotation matrix of the basis attached to the foot.\n",
     "\n",
-    "Now, we can note that the vectors $\\overrightarrow{M_K^S}$ and $\\overrightarrow{M_K^F}$ are the same vectors described in different basis. So we could use only one of the descriptions and use rotation matrices to convert from one to another. To pass the vector from the foot coordinates to the shank coordinate, we must first multiply it by the inverted rotation matrix of the foot and then multiply it by the rotation matrix of the shank. So, $\\overrightarrow{M_K^S} = R_SR_F^{-1}\\overrightarrow{M_K^F}$ and the equations above can be rewritten as:\n",
+    "Now, we can note that the vectors $\\overrightarrow{M_K^S}$ and $\\overrightarrow{M_K^F}$ are the same vectors described in different basis. So we could use only one of the descriptions and use rotation matrices to convert from one to another. To pass the vector from the foot coordinates to the shank coordinate, we must first multiply it by the inverted rotation matrix of the foot and then multiply it by the rotation matrix of the shank. So, $\\overrightarrow{M_A^S} = R_SR_F^{-1}\\overrightarrow{M_A^F}$ and the equations above can be rewritten as:\n",
     "\n",
     "\\begin{align}\n",
     "\\overrightarrow{F_A^G} + \\overrightarrow{GRF^G} + m_F\\overrightarrow{g^G} &= m_F\\overrightarrow{a_{cm_F}^G}\\\\\n",
-    "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
     "\\overrightarrow{M_A^F} + R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})+ R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)&=I_F\\overrightarrow{\\dot{\\omega_F^F}} + \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})\\\\ \n",
+    "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
     "\\overrightarrow{M_K^S} - R_SR_F^{-1}\\overrightarrow{M_A^F} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G}) &= I_F\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_F\\overrightarrow{\\omega_S^S}) \n",
     "\\end{align}"
    ]
@@ -1866,7 +1867,7 @@
    "source": [
     "Now, we divide the equations above in the matrices defined previously:\n",
     "\\begin{equation}\n",
-    "\\underbrace{\\left[\\begin{array}{cccc} m_FI_3& [0]& [0]& [0]\\\\ [0]& I_F  & [0] & [0] \\\\ [0] &[0] &  m_SI_3& [0] \\\\ [0] & [0] & [0] & I_S\\end{array}\\right]}_{M}\\cdot\\left[\\begin{array}{c}\\overrightarrow{a_{cm_F}^G}\\\\\\overrightarrow{\\dot{\\omega_F^F}}\\\\\\overrightarrow{a_{cm_S}^G}\\\\\\overrightarrow{\\dot{\\omega_S^S}} \\\\ \\end{array}\\right] = \\underbrace{\\left[\\begin{array}{c}[0]\\\\ - \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})  \\\\ [0] \\\\ - \\overrightarrow{\\omega_S^S} \\times (I_S\\overrightarrow{\\omega_S^S}) \\end{array}\\right]}_{C} + \\underbrace{\\left[\\begin{array}{c}  m_F\\overrightarrow{g^G}\\\\ [0]\\\\  m_S\\overrightarrow{g^G} \\\\  [0] \\end{array}\\right]}_{G} + \\underbrace{\\left[\\begin{array}{c}  \\overrightarrow{F_A^G}\\\\ \\overrightarrow{M_A^F}+R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)\\\\  \\overrightarrow{F_K^G} - \\overrightarrow{F_A^G} \\\\ \\overrightarrow{M_K^S} - R_SR_F^{-1}\\overrightarrow{M_A^F} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G})  \\end{array}\\right]}_{F} + \\underbrace{\\left[\\begin{array}{c} \\overrightarrow{GRF^G}\\\\  R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})\\\\  [0] \\\\  [0] \\end{array}\\right]}_{E}\n",
+    "\\underbrace{\\left[\\begin{array}{cccc} m_FI_3& [0]& [0]& [0]\\\\ [0]& I_F  & [0] & [0] \\\\ [0] &[0] &  m_SI_3& [0] \\\\ [0] & [0] & [0] & I_S\\end{array}\\right]}_{M}\\cdot\\left[\\begin{array}{c}\\overrightarrow{a_{cm_F}^G}\\\\\\overrightarrow{\\dot{\\omega_F^F}}\\\\\\overrightarrow{a_{cm_S}^G}\\\\\\overrightarrow{\\dot{\\omega_S^S}} \\\\ \\end{array}\\right] = \\underbrace{\\left[\\begin{array}{c}[0]\\\\ - \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})  \\\\ [0] \\\\ - \\overrightarrow{\\omega_S^S} \\times (I_S\\overrightarrow{\\omega_S^S}) \\end{array}\\right]}_{C} + \\underbrace{\\left[\\begin{array}{c}  m_F\\overrightarrow{g^G}\\\\ [0]\\\\  m_S\\overrightarrow{g^G} \\\\  [0] \\end{array}\\right]}_{G} + \\underbrace{\\left[\\begin{array}{c}  \\overrightarrow{F_A^G}\\\\ \\overrightarrow{M_A^F}+R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)\\\\  \\overrightarrow{F_K^G} - \\overrightarrow{F_A^G} \\\\ \\overrightarrow{M_K^S} - R_SR_F^{-1}\\overrightarrow{M_A^F} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G})  \\end{array}\\right]}_{Q} + \\underbrace{\\left[\\begin{array}{c} \\overrightarrow{GRF^G}\\\\  R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})\\\\  [0] \\\\  [0] \\end{array}\\right]}_{E}\n",
     "\\end{equation}"
    ]
   },
@@ -1925,62 +1926,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can generalize this idea  for a system with $n$ segments. \n",
+    "So, generically, the steps to perform the analysis of inverse dynamics is:\n",
     "\n",
-    "<figure><img src=\"../images/invDynSegments.png\\\" width=600 />\n",
-    "    \n",
-    "For the ith segment, the two Newton-Euler equations are:\n",
+    "- write the equations of Newton-Euler for each segment. Write explicitly the basis at which  each vector is described.\n",
     "\n",
-    "\\begin{align}\n",
-    "    \\overrightarrow{F_i^G} - \\overrightarrow{F_{i-1}^G} &= -m_i\\vec{g} + m_i\\vec{a_{cm_i}^G}\\\\\n",
-    "    \\overrightarrow{M_i^i} - R_iR_{i-1}^{-1}\\overrightarrow{M_{i-1}^{i-1}} + R_i(\\overrightarrow{r_{i/cm_i}^G}\\times \\overrightarrow{F_i^G}) - R_i(\\overrightarrow{r_{i-1/cm_i}^G}\\times \\overrightarrow{F_{i-1}^G})&= I_i\\overrightarrow{\\dot{\\omega_i^i}} + \\overrightarrow{\\omega_i^i} \\times (I_i\\overrightarrow{\\omega_i^i}) \n",
-    "\\end{align}\n",
+    "- use the rotation matrices of the basis to pass the description of a vector to another basis. Use it in a way that the same vector is described at just a single frame of reference.\n",
     "\n",
-    "These equations can be written in the matrix form:\n",
+    "- write the cross-products as a product between the skew-symmetric matrix $S$ of the first vector and the second vector.\n",
+    "\n",
+    "- write the equations in the matrix format, repeated here:\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\underbrace{\\left[\\begin{array}{cccc} -I & [0] & I & [0] \\\\\n",
-    "                              -R_iS(\\overrightarrow{r_{i-1/cm_i}^G})&- R_iR_{i-1}^{-1}&R_iS(\\overrightarrow{r_{i/cm_i}^G})&I\\end{array}\\right]}_{A_i}\\cdot \\underbrace{\\left[\\begin{array}{c} \\overrightarrow{F_{i-1}^G}\\\\\\overrightarrow{M_{i-1}^{i-1}}\\\\\\overrightarrow{F_i^G} \\\\ \\overrightarrow{M_i^i}   \\end{array}\\right]}_{F_i} = \\underbrace{\\left[\\begin{array}{c}  -m_i\\vec{g} + m_i\\vec{a_{cm_i}^G}\\\\I_i\\overrightarrow{\\dot{\\omega_i^i}} + \\overrightarrow{\\omega_i^i} \\times (I_i\\overrightarrow{\\omega_i^i}) \\end{array}\\right]}_{Q_i}\n",
+    "    M(q)\\ddot{q} = C(q,\\dot{q}) + G(q) + Q +  E\n",
     "\\end{equation}\n",
     "\n",
-    "And the equation of the segment 1 corresponds to the segment at which a known force and moment is applied. It can be the segment in contact with the floor (the known force is the Ground reaction force) or the segment with no contact in one of the extremities (the known force is zero). The known force will be denoted as $\\vec{F}_0$\n",
+    "- write explicitly the vector containing the unknown forces and moments $Q$, as a multiplication of a matrix and vector containing only the unknown forces.\n",
     "\n",
-    "\\begin{align}\n",
-    "    \\overrightarrow{F_1^G}&= -m_1\\vec{g} + m_1\\vec{a_{cm_i}^G} - \\vec{F}_0^G \\\\\n",
-    "    \\overrightarrow{M_1^1} + R_1(\\overrightarrow{r_{0/cm_1}^G}\\times \\overrightarrow{F_1^G})&= I_1\\overrightarrow{\\dot{\\omega_1^1}} + \\overrightarrow{\\omega_1^1} \\times (I_1\\overrightarrow{\\omega_1^1})  - R_1(\\overrightarrow{r_{0/cm_1}^G}\\times \\overrightarrow{F_{0}^G})\n",
-    "\\end{align}\n",
-    "\n",
-    "\\begin{equation}\n",
-    "    \\underbrace{\\left[\\begin{array}{cc} I & [0] \\\\                              R_1S(\\overrightarrow{r_{1/cm_1}^G})&I\\end{array}\\right]}_{A_1}\\cdot \\underbrace{\\left[\\begin{array}{c}\\overrightarrow{F_1^G} \\\\ \\overrightarrow{M_1^1}   \\end{array}\\right]}_{F_1} = \\underbrace{\\left[\\begin{array}{c}  -m_1\\vec{g} + m_1\\vec{a_{cm_1}^G}- \\vec{F}_0^G \\\\I_1\\overrightarrow{\\dot{\\omega_1^1}} + \\overrightarrow{\\omega_1^1} \\times (I_1\\overrightarrow{\\omega_1^1})  - R_1(\\overrightarrow{r_{0/cm_1}^G}\\times \\overrightarrow{F_{0}^G}) \\end{array}\\right]}_{Q_1}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\tiny\n",
-    "    \\left[\\begin{array}{ccccccccccccccc} I & [0]&...&...&&&&&&& [0]&...&...&...& [0] \\\\                              R_1S(\\overrightarrow{r_{1/cm_1}^G})&I&...&&&&&&&...& [0]&...&...&...&[0]\\\\\n",
-    "          -I & [0] & I & [0]& [0]& [0]&...&...&&&[0]&...&...& [0] \\\\\n",
-    "          -R_2S(\\overrightarrow{r_{1/cm_2}^G})&- R_1R_{1}^{-1}&R_1S(\\overrightarrow{r_{1/cm_1}^G})&I& [0]&...&...&&&...&[0]&...&...&...& [0]\\\\\n",
-    "          [0]&...&\\vdots&\\ddots&...&&&&&&...&&&&[0]\\\\\n",
-    "          [0]&...&...&...& -I & [0] & I & [0] \\\\\n",
-    "                              [0]&...&...&...&-R_iS(\\overrightarrow{r_{i-1/cm_i}^G})&- R_iR_{i-1}^{-1}&R_iS(\\overrightarrow{r_{i/cm_i}^G})&I\\end{array}\\right]                                              \n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "    \\left[\\begin{array}{c}[A_1]\\,\\,\\,[0]\\,\\,... ... ...\\,[0] \\\\\n",
-    "                         [\\hspace{0.6cm}A_2\\hspace{0.5cm}]\\,\\,[0]\\,\\,\\,....\\,[0]\\\\\n",
-    "                         \\,\\,\\vdots...\\vdots \\,\\,...\\,\\ddots\\,...\\,\\vdots \\,\\,\\\\\n",
-    "                         [0]...[A_{i-1}]\\,\\,[0]\n",
-    "                         \\end{array}\\right]\n",
-    "\\end{equation}"
+    "- isolate the vector containing only the unknown forces by multiplying the whole equation by the inverse of the matrix multiplying the vector with the forces."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Problems\n",
+    "\n",
+    "1) Solve the problems 18.3.20 and 18.3.24 of the Ruina and Rudra's book by using the Lagrangian formalism (it is much easier than use the Newton-Euler formalism) and then use the matrix formalism to obtain the expressions of the angular accelerations. \n",
+    "\n",
+    "2) Write the matrices to find the forces and torques in a tridimensional double pendulum, consisted of two cylindrical bars. Consider that you know all the masses, moments of inertia, accelerations, angular velocities and angular accelerations necessary to solve the problem."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2001,7 +1975,9 @@
     "\n",
     "- STANEV, D.; MOUSTAKAS, K. Simulation of constrained musculoskeletal systems in task space. IEEE Transactions on Biomedical Engineering, v. 65, n. 2, p. 307–318, 2018.\n",
     "\n",
-    "- ZAJAC FE, GORDON ME , [Determining muscle's force and action in multi-articular movement](https://drive.google.com/open?id=0BxbW72zV7WmUcC1zSGpEOUxhWXM&authuser=0). Exercise and Sport Sciences Reviews, 17, 187-230. , 1989"
+    "- ZAJAC FE, GORDON ME , [Determining muscle's force and action in multi-articular movement](https://drive.google.com/open?id=0BxbW72zV7WmUcC1zSGpEOUxhWXM&authuser=0). Exercise and Sport Sciences Reviews, 17, 187-230. , 1989\n",
+    "\n",
+    "- RUINA A, RUDRA P. [Introduction to Statics and Dynamics](http://ruina.tam.cornell.edu/Book/index.html). Oxford University Press. , 2015"
    ]
   },
   {
