--- a/notebooks/MatrixFormalism.ipynb
+++ b/notebooks/MatrixFormalism.ipynb
@@ -1824,7 +1824,7 @@
     "\\overrightarrow{F_A} + \\overrightarrow{GRF} + m_F\\overrightarrow{g} &= m_F\\overrightarrow{a_{cm_F}}\\\\\n",
     "\\overrightarrow{M_A} + \\overrightarrow{M_{GRF}}+ \\overrightarrow{M_{FA}}&=I_F\\overrightarrow{\\dot{\\omega_F}} + \\overrightarrow{\\omega_F} \\times (I_F\\overrightarrow{\\omega_F})\\\\ \n",
     "\\overrightarrow{F_K} -\\overrightarrow{F_A} + m_S\\overrightarrow{g} &= m_S\\overrightarrow{a_{cm_S}}\\\\\n",
-    "    \\overrightarrow{M_K} - \\overrightarrow{M_A} + \\overrightarrow{M_{FA}} + \\overrightarrow{M_{FK}} &= I_F\\overrightarrow{\\dot{\\omega_S}} + \\overrightarrow{\\omega_S} \\times (I_F\\overrightarrow{\\omega_S}) \n",
+    "    \\overrightarrow{M_K} - \\overrightarrow{M_A} + \\overrightarrow{M_{FA}} + \\overrightarrow{M_{FK}} &= I_S\\overrightarrow{\\dot{\\omega_S}} + \\overrightarrow{\\omega_S} \\times (I_S\\overrightarrow{\\omega_S}) \n",
     "\\end{align}\n",
     "where \n",
     "\n",
@@ -1846,7 +1846,7 @@
     "\\overrightarrow{F_A^G} + \\overrightarrow{GRF^G} + m_F\\overrightarrow{g^G} &= m_F\\overrightarrow{a_{cm_F}^G}\\\\\n",
     "\\overrightarrow{M_A^F} + \\overrightarrow{M_{GRF}^F}+ \\overrightarrow{M_{FA}^F}&=I_F\\overrightarrow{\\dot{\\omega_F^F}} + \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})\\\\ \n",
     "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
-    "    \\overrightarrow{M_K^S} - \\overrightarrow{M_A^S} + \\overrightarrow{M_{FA}^S} + \\overrightarrow{M_{FK}^S} &= I_F\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_F\\overrightarrow{\\omega_S^S}) \n",
+    "    \\overrightarrow{M_K^S} - \\overrightarrow{M_A^S} + \\overrightarrow{M_{FA}^S} + \\overrightarrow{M_{FK}^S} &= I_S\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_S\\overrightarrow{\\omega_S^S}) \n",
     "\\end{align}\n",
     "where the superscript $G$ denotes the global frame of reference, the superscript $S$ denotes the frame of reference in the shank and the superscript $F$ denotes the frame of reference at the foot.\n",
     "\n",
@@ -1856,7 +1856,7 @@
     "\\overrightarrow{F_A^G} + \\overrightarrow{GRF^G} + m_F\\overrightarrow{g^G} &= m_F\\overrightarrow{a_{cm_F}^G}\\\\\n",
     "\\overrightarrow{M_A^F} + R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})+ R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)&=I_F\\overrightarrow{\\dot{\\omega_F^F}} + \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})\\\\ \n",
     "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
-    "\\overrightarrow{M_K^S} - \\overrightarrow{M_A^S} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G}) &= I_F\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_F\\overrightarrow{\\omega_S^S}) \n",
+    "\\overrightarrow{M_K^S} - \\overrightarrow{M_A^S} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G}) &= I_S\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_S\\overrightarrow{\\omega_S^S}) \n",
     "\\end{align}\n",
     "where $R_S$ is the rotation matrix of the basis attached to the shank and $R_F$ is the rotation matrix of the basis attached to the foot.\n",
     "\n",
@@ -1866,7 +1866,7 @@
     "\\overrightarrow{F_A^G} + \\overrightarrow{GRF^G} + m_F\\overrightarrow{g^G} &= m_F\\overrightarrow{a_{cm_F}^G}\\\\\n",
     "\\overrightarrow{M_A^F} + R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})+ R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)&=I_F\\overrightarrow{\\dot{\\omega_F^F}} + \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})\\\\ \n",
     "\\overrightarrow{F_K^G} -\\overrightarrow{F_A^G} + m_S\\overrightarrow{g^G} &= m_S\\overrightarrow{a_{cm_S}^G}\\\\\n",
-    "\\overrightarrow{M_K^S} - R_SR_F^{-1}\\overrightarrow{M_A^F} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G}) &= I_F\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_F\\overrightarrow{\\omega_S^S}) \n",
+    "\\overrightarrow{M_K^S} - R_SR_F^{-1}\\overrightarrow{M_A^F} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G}) &= I_S\\overrightarrow{\\dot{\\omega_S^S}} + \\overrightarrow{\\omega_S^S} \\times (I_S\\overrightarrow{\\omega_S^S}) \n",
     "\\end{align}"
    ]
   },
@@ -1877,7 +1877,9 @@
     "Now, we divide the equations above in the matrices defined previously:\n",
     "\\begin{equation}\n",
     "\\underbrace{\\left[\\begin{array}{cccc} m_FI_3& [0]& [0]& [0]\\\\ [0]& I_F  & [0] & [0] \\\\ [0] &[0] &  m_SI_3& [0] \\\\ [0] & [0] & [0] & I_S\\end{array}\\right]}_{M}\\cdot\\left[\\begin{array}{c}\\overrightarrow{a_{cm_F}^G}\\\\\\overrightarrow{\\dot{\\omega_F^F}}\\\\\\overrightarrow{a_{cm_S}^G}\\\\\\overrightarrow{\\dot{\\omega_S^S}} \\\\ \\end{array}\\right] = \\underbrace{\\left[\\begin{array}{c}[0]\\\\ - \\overrightarrow{\\omega_F^F} \\times (I_F\\overrightarrow{\\omega_F^F})  \\\\ [0] \\\\ - \\overrightarrow{\\omega_S^S} \\times (I_S\\overrightarrow{\\omega_S^S}) \\end{array}\\right]}_{C} + \\underbrace{\\left[\\begin{array}{c}  m_F\\overrightarrow{g^G}\\\\ [0]\\\\  m_S\\overrightarrow{g^G} \\\\  [0] \\end{array}\\right]}_{G} + \\underbrace{\\left[\\begin{array}{c}  \\overrightarrow{F_A^G}\\\\ \\overrightarrow{M_A^F}+R_F(\\overrightarrow{r_{A/cm_F}^G}\\times \\overrightarrow{F_A}^G)\\\\  \\overrightarrow{F_K^G} - \\overrightarrow{F_A^G} \\\\ \\overrightarrow{M_K^S} - R_SR_F^{-1}\\overrightarrow{M_A^F} - R_S(\\overrightarrow{r_{A/cm_S}^G}\\times \\overrightarrow{F_A^G}) + R_S(\\overrightarrow{r_{K/cm_S}^G}\\times \\overrightarrow{F_K^G})  \\end{array}\\right]}_{Q} + \\underbrace{\\left[\\begin{array}{c} \\overrightarrow{GRF^G}\\\\  R_F(\\overrightarrow{r_{cop/cm_F}^G}\\times \\overrightarrow{GRF^G})\\\\  [0] \\\\  [0] \\end{array}\\right]}_{E}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "where $I_3$ is the identity matrix 3x3."
    ]
   },
   {
@@ -2020,7 +2022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
