--- a/notebooks/MatrixFormalism.ipynb
+++ b/notebooks/MatrixFormalism.ipynb
@@ -1810,7 +1810,7 @@
     "<figure><img src=\"../images/inv.png\" width=600 /> <figcaption><i><center>Adapted from Erdemir et al. (2007) </center></i></figcaption>\n",
     "    \n",
     "    \n",
-    "  As an example, we will consider the problem of estimating the forces and torques in the ankle and knee joints during the gait, considering a 3D movement. At this point, we consider that the  accelerations, angular velocities, angular accelerations, masses and moments of inertia necessary  to compute the forces and moments are known. \n"
+    "  As an example, we will consider the problem of estimating the forces and torques in the ankle and knee joints during the gait, considering a 3D movement. At this point, we consider that the  accelerations, angular velocities, angular accelerations, masses, moments of inertia and rotation matrices necessary  to compute the forces and moments are known. \n"
    ]
   },
   {
@@ -1964,7 +1964,7 @@
     "\n",
     "1) Solve the problems 18.3.20 and 18.3.24 of the Ruina and Rudra's book by using the Lagrangian formalism (it is much easier than use the Newton-Euler formalism) and then use the matrix formalism to obtain the expressions of the angular accelerations. \n",
     "\n",
-    "2) Write the matrices to find the forces and torques in a tridimensional double pendulum, consisted of two cylindrical bars. Consider that you know all the masses, moments of inertia, accelerations, angular velocities and angular accelerations necessary to solve the problem."
+    "2) Write the matrices to find the forces and torques in a tridimensional double pendulum, consisted of two cylindrical bars. Consider that you know all the masses, moments of inertia, rotation matrices, accelerations, angular velocities and angular accelerations necessary to solve the problem."
    ]
   },
   {
