--- a/courses/modsim2018/tasks/exercicio_aula_5-checkpoint.ipynb
+++ b/courses/modsim2018/tasks/exercicio_aula_5-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import json\n",
     "import sympy\n",
     "% matplotlib inline\n",
-    "f = open(\"exerc_phyton.txt\")"
+    "f = open('./exerc_phyton.txt')"
    ]
   },
   {
